--- a/style.css
+++ b/style.css
@@ -26,6 +26,13 @@ h6 {
     font-family: "Lato", sans-serif
 }
 
+.w3-top {
+    position:fixed;
+    width:100%;
+    z-index:1;
+    top:0;
+}
+
 .navbar {
     padding: 8px 16px;
     float: left;
