--- a/style.css
+++ b/style.css
@@ -111,6 +111,22 @@ h6 {
     white-space:nowrap;
 }
 
-.w3-hide-small {
-    display:none!important;
+/* Hide based on screen size */
+
+@media (min-width:993px) {
+    .w3-hide-large{
+        display:none!important;
+    }
+}
+
+@media (max-width:992px) and (min-width:601px){
+    .w3-hide-medium{
+        display:none!important;
+    }
+}
+
+@media (max-width:600px) {
+    .w3-hide-small {
+        display:none!important;
+    }
 }
