--- a/style.css
+++ b/style.css
@@ -72,6 +72,11 @@ h6 {
     padding:12px 24px!important;
 }
 
+.w3-hover-white {
+    color:#000!important;
+    background-color:#fff!important;
+}
+
 /* other CSS */
 .navbar {
     padding: 8px 16px;
