--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h6 {
     padding:12px 24px!important;
 }
 
-.w3-hover-white {
+.w3-hover-white:hover {
     color:#000!important;
     background-color:#fff!important;
 }
