--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h6 {
     font-family: "Lato", sans-serif
 }
 
-/* Navigation Bar - from w3 schools template CSS stylesheet */
+/* Main Navigation Bar structure - from w3 schools template CSS stylesheet */
 .w3-top {
     position:fixed;
     width:100%;
@@ -76,37 +76,16 @@ h6 {
     color:#000!important;
     background-color:#fff!important;
 }
+/* End of Main Navigation Bar structure */
 
-/* other CSS */
-.navbar {
-    padding: 8px 16px;
-    float: left;
-    width: auto;
-    border: none;
-    display: block;
-    outline: 0;
-}
-
-.buttonhover {
-    color: #000!important;
-    background-color: #fff!important;
-}
-
-.homebutton {
-    padding: 12px 24px!important;
-    vertical-align: middle;
-    overflow: hidden;
-    text-decoration: none;
-    text-align: center;
-    cursor: pointer;
-}
+/* Individual Buttons on Nav Bar - from w3schools stylesheet */
 
 .w3-bar-item {
     padding:8px 16px;
     float:left;
     width:auto;
     border:none;
-    display:block;
+    display:inline-block;
     outline:0;
     width:100%;
 }
@@ -143,4 +122,26 @@ h6 {
     .w3-hide-small {
         display:none!important;
     }
+}
+
+.navbar {
+    padding: 8px 16px;
+    float: left;
+    width: auto;
+    border: none;
+    display: block;
+    outline: 0;
+}
+.buttonhover {
+    color: #000!important;
+    background-color: #fff!important;
+}
+
+.homebutton {
+    padding: 12px 24px!important;
+    vertical-align: middle;
+    overflow: hidden;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
 }
