--- a/style.css
+++ b/style.css
@@ -85,14 +85,14 @@ h6 {
     float:left;
     width:auto;
     border:none;
-    display:inline-block;
+    display:inline;
     outline:0;
     width:100%;
 }
 
 .w3-button {
     border:none;
-    display:inline-block;
+    display:inline;
     padding:8px 16px;
     vertical-align:middle;
     overflow:hidden;
