--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h6 {
 
 /* Main Navigation Bar structure - from w3 schools template CSS stylesheet */
 .w3-top {
-    position:fixed;
+    position:fixed;  /* this keeps the nav bar fixed to the top when scrolling */
     width:100%;
     z-index:1;
     top:0;
@@ -53,7 +53,7 @@ h6 {
 }
 
 .w3-card {
-    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); /* this puts the shadow around the box */
 }
 
 .w3-left-align {
@@ -122,26 +122,4 @@ h6 {
     .w3-hide-small {
         display:none!important;
     }
-}
-
-.navbar {
-    padding: 8px 16px;
-    float: left;
-    width: auto;
-    border: none;
-    display: block;
-    outline: 0;
-}
-.buttonhover {
-    color: #000!important;
-    background-color: #fff!important;
-}
-
-.homebutton {
-    padding: 12px 24px!important;
-    vertical-align: middle;
-    overflow: hidden;
-    text-decoration: none;
-    text-align: center;
-    cursor: pointer;
 }
