--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body, h1, h2, h3, h4, h5, h6 {
 
 .w3-button {
     border:none;
-    display:block;
+    display:inline-block;
     padding:8px 16px;
     vertical-align:middle;
     overflow:hidden;
