--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body, h1, h2, h3, h4, h5, h6 {
     float:left;
     width:auto;
     border:none;
-    display:block;
+    display:inline-block;
     outline:0;
     width:100%;
 }
