--- a/style.css
+++ b/style.css
@@ -5,8 +5,21 @@ body, h1, h2, h3, h4, h5, h6 {
 
 /* Main Navigation Bar structure - from w3 schools template CSS stylesheet */
 
-
-
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+.navbutton {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
 
 .fix-top {
     position:fixed;  /* this keeps the nav bar fixed to the top when scrolling */
