--- a/style.css
+++ b/style.css
@@ -12,7 +12,11 @@ ul {
     overflow: hidden;
     background-color: #333;
   }
-  
+
+li {
+    float: left;
+}
+
 .navbutton {
     display: block;
     color: white;
