--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #fff;
   }
 
 li {
@@ -19,7 +19,7 @@ li {
 
 .navbutton {
     display: block;
-    color: white;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
