--- a/style.css
+++ b/style.css
@@ -2,8 +2,11 @@
 body, h1, h2, h3, h4, h5, h6 {
     font-family: "Lato", sans-serif
 }
+body {
+    margin: 0;
+}
 
-/* Main Navigation Bar structure - from w3 schools template CSS stylesheet */
+/* Main Navigation Bar structure - combo of code from w3 schools horizontal navigation bar and template CSS stylesheet */
 
 ul {
     list-style-type: none;
@@ -35,6 +38,8 @@ li {
     z-index:1;
     top:0;
 }
+
+/* End of source */
 
 .w3-bar {
     width:100%;
