--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@
 body, h1, h2, h3, h4, h5, h6 {
     font-family: "Lato", sans-serif
 }
+
 body {
-    margin: 0;
+    margin: 0;   /* sets the margin of the body to 0 for entire page */
 }
 
 /* Main Navigation Bar structure - combo of code from w3 schools horizontal navigation bar and template CSS stylesheet */
@@ -13,7 +14,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #fff;
+    background-color: #b8dbde;
   }
 
 li {
