--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #b8dbde;
+    background-color: #fff;
   }
 
 li {
@@ -30,7 +30,7 @@ li {
 }
 
 .navbutton:hover {
-    background-color: #757575;
+    background-color: #b8dbde;
 }
 
 .fix-top-navbar {
