--- a/style.css
+++ b/style.css
@@ -40,6 +40,12 @@ li {
     top:0;
 }
 
+@media screen and (max-width:600px) {
+    ul.fix-top-navbar {
+        float: none;
+    }
+}
+
 /* End of source */
 
 .w3-bar {
