--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
 /* Main Navigation Bar structure - combo of code from w3 schools horizontal navigation bar and template CSS stylesheet */
 
 ul.topnav {
+    position: fixed;
+    width:100%;
+    z-index:1;
+    top:0;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -42,17 +46,10 @@ ul.topnav li a {
     top:0;
 }
 
-@media (min-width:601px) {
-    .display-large {
-        display:none!important;
-    }
-}
-
-@media (max-width:600px) {
-    .display-small {
-        display:none!important;
-    }
-}
+@media screen and (max-width: 600px) {
+    ul.topnav li.right, 
+    ul.topnav li {float: none;}
+  }
 
 
 /* End of source */
