--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* All work as of November 20, 2020, 12:00AM EST done by Kathryn Little */
+
 body, h1, h2, h3, h4, h5, h6 {
     font-family: "Lato", sans-serif
 }
