--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ body, h1, h2, h3, h4, h5, h6 {
     outline:0;
 }
 
-.w3-red {
+.w3-blue {
     color:#fff!important;
-    background-color:#f44336!important;
+    background-color:#6da2c0!important;
 }
 
 .w3-card {
