--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body, h1, h2, h3, h4, h5, h6 {
 
     width:100%;
     overflow:hidden;
-    display:inline-block;
+    display:inline;
     padding:8px 16px;
     float:left;
     border:none;
