nav bar fa bars

--- a/style.css
+++ b/style.css
@@ -83,6 +83,10 @@ body, h1, h2, h3, h4, h5, h6 {
     width:auto;
 }
 
+.w3-show {
+    display:block!important;
+}
+
 /* End of Individual buttons on nav bar */
 
 /* Hide based on screen size - from w3schools */
