nav bar fa bars

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* All work as of November 20, 2020, 12:00AM EST done by Kathryn Little */
+/* All work as of November 20, 2020, 10:00PM EST done by Kathryn Little */
 
 body {
     margin:0;
