--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* All work as of November 20, 2020, 10:00PM EST done by Kathryn Little */
+/* edits made by Kazuto Nov 21 */
 
 body {
     margin:0;
@@ -146,3 +147,6 @@ body, h1, h2, h3, h4, h5, h6 {
     margin-top:16px!important;
 }
 
+.w3-content {
+    margin: auto;
+}
