--- a/style.css
+++ b/style.css
@@ -159,3 +159,8 @@ body, h1, h2, h3, h4, h5, h6 {
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
 }
+
+.w3-image {
+    max-width: 100%;
+    height: auto;
+}
