--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body, h1, h2, h3, h4, h5, h6 {
     font-family: "Lato", sans-serif
 }
 
+.fixed {
+    position:fixed;
+}
+
 /* Main Navigation Bar structure - from w3 schools template CSS stylesheet */
 .w3-top {
     position:fixed;  /* this keeps the nav bar fixed to the top when scrolling */
