--- a/style.css
+++ b/style.css
@@ -9,8 +9,12 @@ body, h1, h2, h3, h4, h5, h6 {
     font-family: "Lato", sans-serif
 }
 
-.title {
-    font-size:3vw;
+.w3-display-middle{
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    -ms-transform:translate(-50%,-50%);
 }
 
 /* Main Navigation Bar structure - from w3 schools template CSS stylesheet */
