fixed bracket error

--- a/style.css
+++ b/style.css
@@ -69,8 +69,9 @@ h1 {
 .w3-hover-white:hover {
     color:#000!important;
     background-color:#fff!important;
+}
 
-.w3-jumbo{
+.w3-jumbo {
     font-size:64px!important;
 }
 
