--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body, h2, h3, h4, h5, h6 {
 
 h1 {
     color:#fff;
-    font-family: "Georgia", serif;
+    font-family: Georgia, serif;
     font-size:3vw;
 }
 
