--- a/style.css
+++ b/style.css
@@ -10,7 +10,13 @@ body, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    color:#fff;
+    color:#000;
+    font-family: Georgia, serif;
+    font-size:3vw;
+}
+
+.headertext {
+    color:#fff!important;
     font-family: Georgia, serif;
     font-size:3vw;
 }
