--- a/style.css
+++ b/style.css
@@ -183,3 +183,8 @@ h1 {
     max-width: 100%;
     height: auto;
 }
+
+.w3-light-grey {
+    color:#000!important;
+    background-color:#f1f1f1!important;
+}
