changed sub header to italic

--- a/style.css
+++ b/style.css
@@ -202,3 +202,8 @@ h1 {
     color:#000!important;
     background-color:#f1f1f1!important;
 }
+
+.white-italic {
+    color:#fff;
+    font-style:italic;
+}
