--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-/* All work as of November 20, 2020, 10:00PM EST done by Kathryn Little */
-/* edits made by Kazuto Nov 21 */
+/* CSS for template by Kate - SOURCE: W3Schools Stylesheet: https://www.w3schools.com/w3css/4/w3.css */
+/* edits made by Kazuto Nov 21, 22, 23 */
 
 body {
     margin:0;
@@ -22,7 +22,7 @@ h1 {
 }
 
 
-/* Main Navigation Bar structure - from w3 schools template CSS stylesheet */
+/* Main Navigation Bar structure */
 .w3-top {
     position:fixed;  /* this keeps the nav bar fixed to the top when scrolling */
     width:100%;
@@ -31,7 +31,6 @@ h1 {
 }
 
 .w3-bar {
-
     width:100%;
     overflow:hidden;
     display:block;
@@ -46,6 +45,7 @@ h1 {
     background-color:#fff!important;
 }
 
+/* makes a shadow around the nav bar */
 .w3-card {
     box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); /* this puts the shadow around the box */
 }
@@ -80,9 +80,9 @@ h1 {
     font-size:64px!important;
 }
 
-/* End of Main Navigation Bar structure */
+/* End of Main Navigation Bar */
 
-/* Individual Buttons on Nav Bar - from w3schools stylesheet */
+/* Individual Buttons on Nav Bar */
 
 .w3-button {
     border:none;
@@ -113,7 +113,7 @@ h1 {
 
 /* End of Individual buttons on nav bar */
 
-/* Hide based on screen size - from w3schools */
+/* Hide based on screen size (responsive design) */
 
 @media (min-width:993px) {
     .w3-hide-large{
@@ -135,7 +135,7 @@ h1 {
 
 /* End of hide based on screen size */
 
-/* Header - from w3schools stylesheet */
+/* Header and grids */
 
 .w3-container {
     padding:0.01em 16px;
@@ -158,7 +158,6 @@ h1 {
     background-color:#000!important;
 }
 
-
 .w3-padding-large {
     padding:12px 24px!important;
 }
@@ -180,6 +179,12 @@ h1 {
     -ms-transform: translate(-50%,-50%);
 }
 
+.w3-light-grey {
+    color:#000!important;
+    background-color:#f1f1f1!important;
+}
+
+/* Kazuto */
 .w3-image {
     max-width: 100%;
     height: auto;
@@ -198,7 +203,3 @@ h1 {
     width: 33.33%;
 }
 
-.w3-light-grey {
-    color:#000!important;
-    background-color:#f1f1f1!important;
-}
