edited text colours

--- a/style.css
+++ b/style.css
@@ -80,6 +80,10 @@ h1 {
     font-size:64px!important;
 }
 
+.w3-text-grey {
+    color:#757575!important;
+}
+
 /* End of Main Navigation Bar */
 
 /* Individual Buttons on Nav Bar */
