--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* CSS for template by Kate - SOURCE: W3Schools Stylesheet: https://www.w3schools.com/w3css/4/w3.css */
 /* edits made by Kazuto Nov 21, 22, 23 */
+/*  edits made by Mark Nov 24, cleaning up unused classes */
 
 body {
     margin:0;
