--- a/style.css
+++ b/style.css
@@ -117,6 +117,10 @@ h1 {
 
 /* Hide based on screen size (responsive design) */
 
+.w3-hide {
+    display:none!important;
+}
+
 @media (min-width:993px) {
     .w3-hide-large{
         display:none!important;
