--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ h1 {
 
 /* End of Main Navigation Bar */
 
-/* Individual Buttons on Nav Bar */
+/* Owner: Kate */
 
 .w3-bar-item {
     padding:8px 16px;
@@ -110,7 +110,7 @@ h1 {
 }
 
 
-/* End of Individual buttons on nav bar */
+/* End of Owner: Kate */
 
 /* Hide based on screen size (responsive design) */
 
