--- a/style.css
+++ b/style.css
@@ -13,13 +13,31 @@ body, h2, h3, h4, h5, h6 {
 h1 {
     color:#000;
     font-family: Georgia, serif;
-    font-size:2vw;
+    font-size:3vw;
 }
 
 .headertext {
     color:#fff!important;
     font-family: Georgia, serif;
     font-size:3vw;
+}
+
+@media (min-width:993px) {
+    .w3-header-large{
+        font-size:3vw;
+    }
+}
+
+@media (max-width:992px) and (min-width:651px){
+    .w3-header-medium{
+        font-size:2vw;
+    }
+}
+
+@media (max-width:650px) {
+    .w3-header-small {
+        font-size:1vw;
+    }
 }
 
 /* Main Navigation Bar structure */
@@ -123,6 +141,7 @@ h1 {
 .w3-show {
     display:block!important;
 }
+
 @media (min-width:993px) {
     .w3-hide-large{
         display:none!important;
