--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ h1 {
 .headertext {
     color:#fff!important;
     font-family: Georgia, serif;
-    font-size:3vw;
 }
 
 @media (min-width:993px) {
@@ -98,9 +97,9 @@ p {
     background-color:#fff!important;
 }
 
-.w3-jumbo2 {
+/* .w3-jumbo {
     font-size:64px!important;
-}
+} */
 
 
 
