responsive header text

--- a/style.css
+++ b/style.css
@@ -22,20 +22,20 @@ h1 {
 }
 
 @media (min-width:993px) {
-    .w3-header-large{
-        font-size:3vw;
+    .header-large{
+        font-size:5vw;
     }
 }
 
 @media (max-width:992px) and (min-width:651px){
-    .w3-header-medium{
-        font-size:2vw;
+    .header-medium{
+        font-size:4vw;
     }
 }
 
 @media (max-width:650px) {
-    .w3-header-small {
-        font-size:1vw;
+    .header-small {
+        font-size:3vw;
     }
 }
 
