--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 /* edits made by Kazuto Nov 21, 22, 23 */
 /*  edits made by Mark Nov 24, cleaning up unused classes */
 
+/* Owner: Kate */
 body {
     margin:0;
 }
@@ -43,6 +44,11 @@ p {
     text-align:justify;
 }
 
+.center-align {
+    text-align:center;
+}
+
+
 /* Main Navigation Bar structure */
 .w3-top {
     position:fixed;  /* this keeps the nav bar fixed to the top when scrolling */
@@ -66,7 +72,6 @@ p {
     background-color:#fff!important;
 }
 
-/* makes a shadow around the nav bar */
 .w3-card {
     box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); /* this puts the shadow around the box */
 }
@@ -100,12 +105,6 @@ p {
 /* .w3-jumbo {
     font-size:64px!important;
 } */
-
-
-
-/* End of Main Navigation Bar */
-
-/* Owner: Kate */
 
 .w3-button {
     border:none;
