Projects work in progress

--- a/style.css
+++ b/style.css
@@ -273,3 +273,8 @@ p {
     margin: 30px 10px;
 }
 /* Mart end */
+
+/* Mark edit formatting for Projects Page Dec 5 2020 */
+.anchor {
+    padding-top: 90px;
+}
