--- a/style.css
+++ b/style.css
@@ -146,6 +146,19 @@ p {
     width:auto;
 }
 
+.burger-item {
+    border:none;
+    display:block;
+    padding:8px 16px;
+   /* vertical-align:middle; */
+    overflow:hidden;
+    text-decoration:none;
+    color:inherit;
+    background-color:inherit;
+    text-align:left;
+    cursor:pointer;
+    white-space:nowrap;
+}
 
 /* End of Owner: Kate */
 
