--- a/style.css
+++ b/style.css
@@ -248,7 +248,7 @@ p {
     margin-top:16px;
 }
 
-/* Kate */
+/* owner: Kate */
 
 .bar-block {
     width:100%;
@@ -347,3 +347,5 @@ p {
     max-width: 400px;
     height: auto;
   }
+
+/* end owner: Kate */
