edited comments in style.css

--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ p {
     color:#757575;
 }
 
-/* Kazuto */
+/* owner: Kazuto */
 .image {
     max-width: 100%;
     height: auto;
@@ -292,6 +292,8 @@ p {
 .thirdWidth {
     width: 33.33%;
 }
+/* end Kazuto */
+
 /* Mark */
 .halfWidth {
     width: 50%;
