--- a/style.css
+++ b/style.css
@@ -97,7 +97,6 @@ p {
     border:none;
     display:block;
     padding:8px 16px;
-   /* vertical-align:middle; */
     overflow:hidden;
     text-decoration:none;
     color:inherit;
@@ -129,7 +128,6 @@ p {
     border:none;
     display:block;
     padding:8px 16px;
-   /* vertical-align:middle; */
     overflow:hidden;
     text-decoration:none;
     color:inherit;
@@ -138,8 +136,6 @@ p {
     cursor:pointer;
     white-space:nowrap;
 }
-
-/* End of Owner: Kate */
 
 /* Hide based on screen size (responsive design) */
 
@@ -172,6 +168,8 @@ p {
         display:none;
     }
 }
+
+/* End of Owner: Kate */
 
 /* Kazuto ownership */
 @media (min-width:993px){
@@ -270,13 +268,13 @@ p {
 .thirdWidth {
     width: 33.33%;
 }
-/* end Kazuto */
 
-/* Mark */
 .halfWidth {
     width: 50%;
 }
-/* Mark end */
+
+/* end Kazuto */
+
 
 /* Mark  edit formatting for People Page Dec 1 2020*/
 
@@ -310,6 +308,8 @@ p {
 .minlink {
     min-width: 143px;
 }
+
+/* End owner Mark */
 
 /* owner: kate */
 
