--- a/style.css
+++ b/style.css
@@ -329,6 +329,7 @@ p {
   }
 /* end owner: Kate */
 
+/* Owner: Kazuto */
 .dropContact {
     border-radius:12px;
     background-color: #f1f1f1;
@@ -347,3 +348,4 @@ p {
     padding:16px;
 
 }
+/* End of Owner: Kazuto */
